fix inbox.html link in online-experience

--- a/online-experience/calendar_week.html
+++ b/online-experience/calendar_week.html
@@ -128,7 +128,7 @@
                     </li>
                     <li>
                       <div class="app-theme__navbar-left-menu-list">
-                        <a href="inbox.html" class="app-theme__navbar-left-menu-list-text-wrapper"
+                        <a href="../messaging/inbox.html" class="app-theme__navbar-left-menu-list-text-wrapper"
                           ><div class="app-theme__navbar-left-menu-list-text">Inbox</div></a
                         >
                       </div>
