fix payment-form iframe path in payment.html

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -3213,7 +3213,7 @@
                                                             frameborder="0"
                                                             scrolling="no"
                                                             seamless=""
-                                                            src="payments/payment-form.html"
+                                                            src="payment-form.html"
                                                             title="Payments card input form"
                                                           ></iframe>
                                                         </div>
@@ -5029,7 +5029,7 @@
                           frameborder="0"
                           scrolling="no"
                           seamless=""
-                          src="payments/payment-form.html"
+                          src="payment-form.html"
                           title="Payments card input form"
                         ></iframe>
                       </div>
