fix modals in submission

--- a/submission/basics-error.html
+++ b/submission/basics-error.html
@@ -899,7 +899,7 @@
           style="position: relative"
         >
           <div class="modal__close">
-            <button aria-label="Close" type="button" class="btn-close">
+            <button aria-label="Close" type="button" class="btn-close"  data-bs-dismiss="modal">
               <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
@@ -1107,7 +1107,7 @@
           style="position: relative"
         >
           <div class="modal__close">
-            <button aria-label="Close" type="button" class="btn-close">
+            <button aria-label="Close" type="button" class="btn-close"  data-bs-dismiss="modal">
               <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
