--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1318,7 +1318,7 @@
           style="position: relative"
         >
           <div class="modal__close">
-            <button aria-label="Close" type="button" class="btn-close">
+            <button aria-label="Close" type="button" class="btn-close"  data-bs-dismiss="modal">
               <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
@@ -1526,7 +1526,7 @@
           style="position: relative"
         >
           <div class="modal__close">
-            <button aria-label="Close" type="button" class="btn-close">
+            <button aria-label="Close" type="button" class="btn-close"  data-bs-dismiss="modal">
               <span class="relative"
                 ><svg
                   viewBox="0 0 32 32"
