make tab handler global

--- a/account/account-notifications.html
+++ b/account/account-notifications.html
@@ -327,6 +327,7 @@
                                 <div
                                   id="notification-preferences"
                                   aria-label="Notifications"
+                                  role='tablistcontainer'
                                 >
                                   <div class="tab__list" role="tablist">
                                     <button
@@ -1122,6 +1123,7 @@
                                     <div
                                       id="notification-preferences"
                                       aria-label="Notifications"
+                                      role='tablistcontainer'
                                     >
                                       <div class="tab__list" role="tablist">
                                         <button
