--- a/account/privacy-and-sharing.html
+++ b/account/privacy-and-sharing.html
@@ -277,6 +277,7 @@
                                           <div class="notification__container-account-settings">
                                             <div
                                               id="account-settings-main-navigation-tabs"
+                                              role='tablistcontainer'
                                             >
                                               <div class="relative">
                                                 <div
@@ -963,6 +964,7 @@
                                   <div class="notification__container-wrapper">
                                     <div
                                       id="account-settings-main-navigation-tabs"
+                                      role='tablistcontainer'
                                     >
                                       <div class="relative">
                                         <div
@@ -1950,6 +1952,5 @@
     </div>
 
     <script src="../assets/js/components.js" defer></script>
-    <script src="../assets/js/pages/privacy-and-sharing.js" defer></script>
   </body>
 </html>
