--- a/lps-resources/help.html
+++ b/lps-resources/help.html
@@ -314,7 +314,7 @@
                             </div>
                           </div>
                           <div id="FMP-target">
-                            <div id="role_tabs">
+                            <div id="role_tabs" role='tablistcontainer'>
                               <div class="relative">
                                 <div
                                   class="_1xkr92p"
@@ -6154,6 +6154,5 @@
     </div>
 
     <script src="../assets/js/components.js" defer></script>
-    <script src="../assets/js/pages/help.js" defer></script>
   </body>
 </html>
