refactor tab__btn

--- a/account/account-notifications.html
+++ b/account/account-notifications.html
@@ -335,7 +335,7 @@
                                       id="tab--notification-preferences--0"
                                       aria-controls="panel--notification-preferences--0"
                                       aria-selected="true"
-                                      class="tab__list-btn-primary"
+                                      class="tab__btn-active"
                                       role="tab"
                                     >
                                       Offers and updates</button
@@ -344,7 +344,7 @@
                                       id="tab--notification-preferences--1"
                                       aria-controls="panel--notification-preferences--1"
                                       aria-selected="false"
-                                      class="tab__list-btn-secondary"
+                                      class="tab__btn"
                                       role="tab"
                                       tabindex="-1"
                                     >
@@ -1131,7 +1131,7 @@
                                           id="tab--notification-preferences--0"
                                           aria-controls="panel--notification-preferences--0"
                                           aria-selected="true"
-                                          class="tab__list-btn-primary"
+                                          class="tab__btn-active"
                                           role="tab"
                                         >
                                           Offers and updates</button
@@ -1140,7 +1140,7 @@
                                           id="tab--notification-preferences--1"
                                           aria-controls="panel--notification-preferences--1"
                                           aria-selected="false"
-                                          class="tab__list-btn-secondary"
+                                          class="tab__btn"
                                           role="tab"
                                           tabindex="-1"
                                         >
