--- a/account/privacy-and-sharing.html
+++ b/account/privacy-and-sharing.html
@@ -293,7 +293,7 @@
                                                       id="tab--account-settings-main-navigation-tabs--0"
                                                       aria-controls="panel--account-settings-main-navigation-tabs--0"
                                                       aria-selected="true"
-                                                      class="tab__list-btn-primary"
+                                                      class="tab__btn-active"
                                                       role="tab"
                                                     >
                                                       Data</button
@@ -302,7 +302,7 @@
                                                       id="tab--account-settings-main-navigation-tabs--1"
                                                       aria-controls="panel--account-settings-main-navigation-tabs--1"
                                                       aria-selected="false"
-                                                      class="tab__list-btn-secondary"
+                                                      class="tab__btn"
                                                       role="tab"
                                                       tabindex="-1"
                                                     >
@@ -312,7 +312,7 @@
                                                       id="tab--account-settings-main-navigation-tabs--2"
                                                       aria-controls="panel--account-settings-main-navigation-tabs--2"
                                                       aria-selected="false"
-                                                      class="tab__list-btn-secondary"
+                                                      class="tab__btn"
                                                       role="tab"
                                                       tabindex="-1"
                                                     >
@@ -977,7 +977,7 @@
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="tab__list-btn-primary"
+                                              class="tab__btn-active"
                                               role="tab"
                                             >
                                               Data</button
@@ -986,7 +986,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -996,7 +996,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
