--- a/lps-resources/help.html
+++ b/lps-resources/help.html
@@ -330,7 +330,7 @@
                                       id="tab--role_tabs--0"
                                       aria-controls="panel--role_tabs--0"
                                       aria-selected="true"
-                                      class="tab__list-btn-primary"
+                                      class="tab__btn-active"
                                       role="tab"
                                     >
                                       Guest</button
@@ -339,7 +339,7 @@
                                       id="tab--role_tabs--1"
                                       aria-controls="panel--role_tabs--1"
                                       aria-selected="false"
-                                      class="tab__list-btn-secondary"
+                                      class="tab__btn"
                                       role="tab"
                                       tabindex="-1"
                                     >
@@ -349,7 +349,7 @@
                                       id="tab--role_tabs--2"
                                       aria-controls="panel--role_tabs--2"
                                       aria-selected="false"
-                                      class="tab__list-btn-secondary"
+                                      class="tab__btn"
                                       role="tab"
                                       tabindex="-1"
                                     >
@@ -359,7 +359,7 @@
                                       id="tab--role_tabs--3"
                                       aria-controls="panel--role_tabs--3"
                                       aria-selected="false"
-                                      class="tab__list-btn-secondary"
+                                      class="tab__btn"
                                       role="tab"
                                       tabindex="-1"
                                     >
