--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -1020,7 +1020,7 @@
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="tab__list-btn-primary"
+                                              class="tab__btn-active"
                                               role="tab"
                                             >
                                               Payments</button
@@ -1029,7 +1029,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -1039,7 +1039,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -1049,7 +1049,7 @@
                                               id="tab--account-settings-main-navigation-tabs--3"
                                               aria-controls="panel--account-settings-main-navigation-tabs--3"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
