--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -801,7 +801,7 @@
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                             >
                                               Payments</button
@@ -810,7 +810,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="tab__list-btn-primary"
+                                              class="tab__btn-active"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -820,7 +820,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -830,7 +830,7 @@
                                               id="tab--account-settings-main-navigation-tabs--3"
                                               aria-controls="panel--account-settings-main-navigation-tabs--3"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
