--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -658,7 +658,7 @@
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                             >
                                               Payments</button
@@ -667,7 +667,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -677,7 +677,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="tab__list-btn-primary"
+                                              class="tab__btn-active"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -687,7 +687,7 @@
                                               id="tab--account-settings-main-navigation-tabs--3"
                                               aria-controls="panel--account-settings-main-navigation-tabs--3"
                                               aria-selected="false"
-                                              class="tab__list-btn-secondary"
+                                              class="tab__btn"
                                               role="tab"
                                               tabindex="-1"
                                             >
