add new social-impact-host

--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -8335,7 +8335,7 @@
           </div>
         </div>
       </div>
-      <div class="_15lzjb6"><button type="button" class="_1dj2p4gk">Show all photos</button></div>
+      <div class="_15lzjb6"><button type="button" class="btn-outline">Show all photos</button></div>
     </div>
   </div>
 </div>
