--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -8875,7 +8875,7 @@
           </div>
         </div>
       </div>
-      <div class="_15lzjb6"><button type="button" class="_1dj2p4gk">Show all photos</button></div>
+      <div class="_15lzjb6"><button type="button" class="btn-outline">Show all photos</button></div>
     </div>
   </div>
 </div>
@@ -16204,7 +16204,7 @@
                 </div>
               </div>
             </div>
-            <div class="_1i6nsdp"><button type="button" class="_1dj2p4gk">Show all 27 amenities</button></div>
+            <div class="_1i6nsdp"><button type="button" class="btn-outline">Show all 27 amenities</button></div>
           </section>
         </div>
       </div>
