--- a/online-experience/calendar_agenda.html
+++ b/online-experience/calendar_agenda.html
@@ -3243,7 +3243,7 @@
                         </div>
                       </div>
                       <div class="bwkwbtz dir dir-ltr sched-content-md"><button data-testid="schedule-experience-button"
-                          type="button" class="_1dj2p4gk">Schedule an
+                          type="button" class="btn-outline">Schedule an
                           experience</button></div>
                       <div data-testid="create-row-section-starts_at sched-content-xl"
                         class="main-content__details-form- sched-content-xl">
