--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -19901,7 +19901,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           </div>
           <div class="_1s86b2t"><a
               href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=0dfa1fb1-11b0-4e7f-bd4c-57a09293f210&amp;searchId=30a3e09a-8f17-462d-953b-9ef00c0582f3&amp;sectionId=a09a756c-c994-4370-8013-d63a9389b387&amp;source=p2&amp;modal=BOOK_IT"
-              class="_1dj2p4gk">Show more dates</a></div>
+              class="btn-outline">Show more dates</a></div>
         </div>
       </div>
     </div>
@@ -21161,7 +21161,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             </div>
             <div class="_shcho8"><a rel="noopener noreferrer" target="_blank"
                 href="https://www.airbnb.com/s/experiences?refinement_paths%5B%5D=%2Fexperiences%2FKG%2FTag%3A6951&amp;search_type=unknown"
-                class="_1dj2p4gk">Show all online experiences</a></div>
+                class="btn-outline">Show all online experiences</a></div>
           </section>
         </div>
       </div>
