Add accessibility page

--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -648,7 +648,7 @@
                                                         </span>
                                                       </div>
                                                     </div>
-                                                    <div class="_1mqc21n">
+                                                    <div class="ml2">
                                                       <span class="_10ndlvp">
                                                         <input
                                                           aria-labelledby="underTwo-row-title"
@@ -742,7 +742,7 @@
                                                         on your experience.
                                                       </div>
                                                     </div>
-                                                    <div class="_1mqc21n">
+                                                    <div class="ml2">
                                                       <span class="_10ndlvp">
                                                         <input
                                                           aria-labelledby="Tag:4804-row-title"
@@ -796,7 +796,7 @@
                                                         provide.
                                                       </div>
                                                     </div>
-                                                    <div class="_1mqc21n">
+                                                    <div class="ml2">
                                                       <span class="_10ndlvp">
                                                         <input
                                                           aria-labelledby="Tag:4802-row-title"
@@ -848,7 +848,7 @@
                                                         the senses of guests.
                                                       </div>
                                                     </div>
-                                                    <div class="_1mqc21n">
+                                                    <div class="ml2">
                                                       <span class="_10ndlvp">
                                                         <input
                                                           aria-labelledby="Tag:4805-row-title"
@@ -1187,7 +1187,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                         </span>
                                                       </div>
                                                     </div>
-                                                    <div class="_1mqc21n">
+                                                    <div class="ml2">
                                                       <span class="_10ndlvp">
                                                         <input
                                                           aria-labelledby="requireIdVerification-row-title"
