--- a/edit/photos.html
+++ b/edit/photos.html
@@ -560,7 +560,7 @@
                                     data-plugin-in-point-id="COVER_PHOTO"
                                     data-section-id="COVER_PHOTO"
                                   >
-                                    <div class="_1byskwn">
+                                    <div class="account-container__menu-container">
                                       <div class="_1oa4lmzv">
                                         <div class="_l8ik20">
                                           <div class="relative">
@@ -780,7 +780,7 @@
                                     data-plugin-in-point-id="GALLERY_PHOTOS"
                                     data-section-id="GALLERY_PHOTOS"
                                   >
-                                    <div class="_1byskwn">
+                                    <div class="account-container__menu-container">
                                       <div class="_1oa4lmzv">
                                         <div class="_l8ik20">
                                           <div class="relative">
