--- a/edit/what.html
+++ b/edit/what.html
@@ -787,7 +787,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                           backyard
                                                         </div>
                                                       </div>
-                                                      <div class="_1mqc21n">
+                                                      <div class="ml2">
                                                         <input
                                                           aria-labelledby="ONLINE_QUESTION-0-radio-row-row-title"
                                                           aria-describedby="ONLINE_QUESTION-0-radio-row-row-subtitle"
@@ -827,7 +827,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                           tourist attraction
                                                         </div>
                                                       </div>
-                                                      <div class="_1mqc21n">
+                                                      <div class="ml2">
                                                         <input
                                                           aria-labelledby="ONLINE_QUESTION-1-radio-row-row-title"
                                                           aria-describedby="ONLINE_QUESTION-1-radio-row-row-subtitle"
