--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -21583,7 +21583,7 @@
                                         <div class="bk5zv5c b1w3s95i pxj7xmk dir dir-ltr"
                                           style="--computedBottom:3; --computedTop:0; --computedBottomMediumAndAbove:1; --computedBottomLargeAndAbove:3; --computedTopMediumAndAbove:5; --computedTopLargeAndAbove:5;">
                                           <div data-testid="photo-viewer-section" class="_1xiaz2f5">
-                                            <div class="_1byskwn">
+                                            <div class="account-container__menu-container">
                                               <div class="_h5cegly">
                                                 <div class="_125gmrun">
                                                   <div style="display: grid; grid-area: 1 / 1 / auto / auto;">
@@ -23421,7 +23421,7 @@
                                             <div class="bk5zv5c b1w3s95i pxj7xmk dir dir-ltr"
                                               style="--computedBottom:3; --computedTop:0; --computedBottomMediumAndAbove:1; --computedBottomLargeAndAbove:3; --computedTopMediumAndAbove:5; --computedTopLargeAndAbove:5;">
                                               <div data-testid="photo-viewer-section" class="_1gjkp1">
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_h5cegly">
                                                     <div class="_125gmrun">
                                                       <div style="display: grid; grid-area: 1 / 1 / auto / auto;">
