--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -128,7 +128,7 @@
                       </nav>
                       <div tabindex="-1" class="_1i7ccu91">
                         <div class="_1ynbv25">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
                               <div class="_le6wlg">
                                 <div
@@ -164,7 +164,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
                               <div class="wrapper-full max__width dir dir-ltr" style="--maxWidth: 1120px">
@@ -263,7 +263,7 @@
                             </div>
                           </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
                               <div class="_le6wlg">
                                 <div
@@ -298,7 +298,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
                               <div class="_le6wlg">
                                 <div
@@ -565,7 +565,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1440px">
                               <div class="_le6wlg">
                                 <div
@@ -620,7 +620,7 @@
                       </div>
                     </main>
                   </div>
-                  <div class="c1yo0219 dir dir-ltr"></div>
+                  <div class="flex-before-after dir dir-ltr"></div>
                 </div>
                 <div class="t2pjd0h dir dir-ltr">
                   <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
