--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1413,7 +1413,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="c1yo0219 dir dir-ltr">
+                                    <div class="flex-before-after dir dir-ltr">
                                       <div
                                         style="--gp-section-max-width: 1120px"
                                       >
