fix image paths in accessiblity

--- a/accessibility.html
+++ b/accessibility.html
@@ -203,15 +203,15 @@
                 </div>
                 <div class="pg1xb23 dir dir-ltr">Here are some of the organizations that we partner with</div>
                 <div class="l1c52faf dir dir-ltr"><img class="l1if72on dir dir-ltr"
-                    src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-1-compact.2b5b0cfc8a81b6a7ffd790aea94288a5.svg"
+                    src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-1-compact.2b5b0cfc8a81b6a7ffd790aea94288a5.svg"
                     alt="National Federation of the Blind logo. Tagline text reads &quot;Live the life you want.&quot;"
                     loading="lazy"><img class="l1if72on dir dir-ltr"
-                    src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-2-compact.900fc9f726b8bec71b99d1f0a70d1a6d.svg"
+                    src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-2-compact.900fc9f726b8bec71b99d1f0a70d1a6d.svg"
                     alt="National Council on Independent Living logo" loading="lazy"><img class="l1if72on dir dir-ltr"
-                    src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-3-compact.f62e5f68f1233bdc380a4ecfd823a8cc.svg"
+                    src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-3-compact.f62e5f68f1233bdc380a4ecfd823a8cc.svg"
                     alt="Consejo National de Personas con Discapacidad logo" loading="lazy"><img
                     class="l1if72on dir dir-ltr"
-                    src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-4-compact.3be7773e23e6bb4ababc5105a98a2c82.svg"
+                    src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/compact/logo-4-compact.3be7773e23e6bb4ababc5105a98a2c82.svg"
                     alt="United Spinal Association logo" loading="lazy"></div>
               </div>
             </div>
@@ -611,15 +611,15 @@
                   <div class="pg1xb23 dir dir-ltr">Here are some of the organizations
                     that we partner with</div>
                   <div class="l1c52faf dir dir-ltr"><img class="l1if72on dir dir-ltr"
-                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-1-wide.5bff22d7e246703346b4fecfc5dad714.svg"
+                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-1-wide.5bff22d7e246703346b4fecfc5dad714.svg"
                       alt="National Federation of the Blind logo. Tagline text reads &quot;Live the life you want.&quot;"
                       loading="lazy"><img class="l1if72on dir dir-ltr"
-                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-2-wide.caf117d92ce11c3ceadb6f3b1f314128.svg"
+                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-2-wide.caf117d92ce11c3ceadb6f3b1f314128.svg"
                       alt="National Council on Independent Living logo" loading="lazy"><img class="l1if72on dir dir-ltr"
-                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-3-wide.25fd8503780126609fd72caed8a8a541.svg"
+                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-3-wide.25fd8503780126609fd72caed8a8a541.svg"
                       alt="Consejo National de Personas con Discapacidad logo" loading="lazy"><img
                       class="l1if72on dir dir-ltr"
-                      src="//a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-4-wide.ad2999e30a5d3f3ea95d80faff8b928b.svg"
+                      src="https://a0.muscache.com/airbnb/static/packages/assets/frontend/landing-pages-accessibility/content/images/logos/wide/logo-4-wide.ad2999e30a5d3f3ea95d80faff8b928b.svg"
                       alt="United Spinal Association logo" loading="lazy"></div>
                 </div>
               </div>
