update help header, add searching-and-booking

--- a/all-topics.html
+++ b/all-topics.html
@@ -14,7 +14,7 @@
           <div>
             <div>
               <header>
-                <div class="h7ta1ht h1uky8qg dir dir-ltr">
+                <div class="h7ta1ht dir dir-ltr">
                   <div class="cil4dqc dir dir-ltr">
                     <div class="l714px3 dir dir-ltr">
                       <div class="c17y9q74 dir dir-ltr">
@@ -144,6 +144,39 @@
                           </div>
                         </div>
                       </div>
+                    </div>
+                    <div class="s10j8jbx dir dir-ltr">
+                      <button
+                        aria-label="Search how-tos and more"
+                        data-testid="header-search-overlay-trigger"
+                        aria-haspopup="dialog"
+                        type="button"
+                        class="_oda838"
+                      >
+                        <span class="_e296pg"
+                          ><svg
+                            viewBox="0 0 32 32"
+                            xmlns="http://www.w3.org/2000/svg"
+                            style="
+                              display: block;
+                              fill: none;
+                              height: 16px;
+                              width: 16px;
+                              stroke: currentColor;
+                              stroke-width: 4;
+                              overflow: visible;
+                            "
+                            aria-hidden="true"
+                            role="presentation"
+                            focusable="false"
+                          >
+                            <g fill="none">
+                              <path
+                                d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"
+                              ></path>
+                            </g></svg
+                        ></span>
+                      </button>
                     </div>
                     <div class="ma262ps dir dir-ltr">
                       <div class="l1iptyfs dir dir-ltr">
@@ -282,7 +315,7 @@
                         <div class="s5kl4rh dir dir-ltr">
                           Browse our full library of help topics.
                         </div>
-                        <div id="role_tabs" role='tablistcontainer'>
+                        <div id="role_tabs" role="tablistcontainer">
                           <div class="_e296pg">
                             <div
                               class="_1xkr92p"
