add sidebar for logout in searching-for-stays

--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -275,6 +275,30 @@
               </header>
               <div class="p1l24gcu dir dir-ltr">
                 <div class="abe8ors dir dir-ltr">
+                  <div class="_17ctt5 hidden-xl">
+                    <div class="l148h9rn dir dir-ltr">
+                      <a
+                        data-no-client-routing="true"
+                        href="/login?redirect_url=/help/article/252/searching-for-stays"
+                        class="_6hkhatt"
+                        ><span class="_jxxpcd"
+                          ><span
+                            class="_kaq6tx"
+                            style="
+                              background-position: calc(
+                                  (100 - var(--mouse-x, 0)) * 1%
+                                )
+                                calc((100 - var(--mouse-y, 0)) * 1%);
+                              --mouse-x: 58.517;
+                              --mouse-y: 43.75;
+                            "
+                          ></span></span
+                        ><span class="_tcp689"
+                          >Log in or sign up<!-- -->
+                        </span></a
+                      >
+                    </div>
+                  </div>
                   <div class="_1udzt2s">
                     <div class="czkr4ph dir dir-ltr">
                       <nav aria-label="breadcrumb">
@@ -729,7 +753,37 @@
                         class="s7r7gee dir dir-ltr"
                         style="--sidebar-padding-top: 34px"
                       >
-                        <div class="_pawvzww"></div>
+                        <div class="_pawvzww" style="margin-bottom: 2rem">
+                          <div
+                            class="lksobbu dir dir-ltr"
+                            data-testid="article-login-prompt"
+                          >
+                            <div class="l171tj0s dir dir-ltr">
+                              Get help with your reservations, account, and
+                              more.
+                            </div>
+                            <a
+                              data-no-client-routing="true"
+                              href="/login?redirect_url=/help/article/252/searching-for-stays"
+                              class="_1pcbldss"
+                              ><span class="_jxxpcd"
+                                ><span
+                                  class="_kaq6tx"
+                                  style="
+                                    background-position: calc(
+                                        (100 - var(--mouse-x, 0)) * 1%
+                                      )
+                                      calc((100 - var(--mouse-y, 0)) * 1%);
+                                    --mouse-x: 1.64234;
+                                    --mouse-y: 2.89522;
+                                  "
+                                ></span></span
+                              ><span class="_tcp689"
+                                >Log in or sign up
+                              </span></a
+                            >
+                          </div>
+                        </div>
                         <aside class="cpwcjur dir dir-ltr">
                           <section>
                             <h1
