--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -623,7 +623,10 @@
                                   data-testid="article-feedback-widget"
                                 >
                                   <div>
-                                    <div class="c1okfifi dir dir-ltr">
+                                    <div
+                                      class="c1okfifi dir dir-ltr"
+                                      style="margin-bottom: 0.5rem"
+                                    >
                                       <div
                                         class="t1gs7fsd dir dir-ltr"
                                         id="content_feedback_primary_prompt"
@@ -649,6 +652,156 @@
                                         </button>
                                       </div>
                                     </div>
+                                    <section>
+                                      <form
+                                        data-testid="content-feedback-secondary-prompt"
+                                      >
+                                        <h2
+                                          tabindex="-1"
+                                          class="_14i3z6h"
+                                          elementtiming="LCP-target"
+                                        >
+                                          <div
+                                            class="tm818ve dir dir-ltr"
+                                            tabindex="-1"
+                                          >
+                                            Tell us a little more.
+                                          </div>
+                                        </h2>
+                                        <div class="cqmqvcq dir dir-ltr">
+                                          <fieldset class="_25bp3z">
+                                            <legend class="_1wjt7fx">
+                                              <div class="d15dogh5 dir dir-ltr">
+                                                Please select all that apply.
+                                              </div>
+                                            </legend>
+                                            <div class="ocd8a5j dir dir-ltr">
+                                              <label
+                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                for="feedback-secondary-options-CheckboxFieldGroup-instructions_did_not_work"
+                                                ><span class="_10ndlvp"
+                                                  ><input
+                                                    id="feedback-secondary-options-CheckboxFieldGroup-instructions_did_not_work"
+                                                    name="instructions_did_not_work"
+                                                    class="_smt4n2a"
+                                                    type="checkbox" /><span
+                                                    class="_1v5cvwv4"
+                                                    data-checkbox="true"
+                                                    ><span class="_1oj8hra"
+                                                      ><svg
+                                                        viewBox="0 0 32 32"
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        aria-hidden="true"
+                                                        role="presentation"
+                                                        focusable="false"
+                                                        style="
+                                                          display: block;
+                                                          fill: none;
+                                                          height: 16px;
+                                                          width: 16px;
+                                                          stroke: currentcolor;
+                                                          stroke-width: 4;
+                                                          overflow: visible;
+                                                        "
+                                                      >
+                                                        <path
+                                                          fill="none"
+                                                          d="m4 16.5 8 8 16-16"
+                                                        ></path></svg></span></span></span
+                                                ><span
+                                                  class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                                  ><div
+                                                    class="o1qa0ptp dir dir-ltr"
+                                                  >
+                                                    These instructions didn’t
+                                                    work
+                                                  </div></span
+                                                ></label
+                                              >
+                                            </div>
+                                            <div class="ocd8a5j dir dir-ltr">
+                                              <label
+                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                for="feedback-secondary-options-CheckboxFieldGroup-did_not_find_answer"
+                                                ><span class="_10ndlvp"
+                                                  ><input
+                                                    id="feedback-secondary-options-CheckboxFieldGroup-did_not_find_answer"
+                                                    name="did_not_find_answer"
+                                                    class="_1yf4i4f"
+                                                    type="checkbox" /><span
+                                                    class="_41yoza"
+                                                    data-checkbox="true"
+                                                  ></span></span
+                                                ><span
+                                                  class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                                  ><div
+                                                    class="o1qa0ptp dir dir-ltr"
+                                                  >
+                                                    I didn’t find the answer to
+                                                    my question
+                                                  </div></span
+                                                ></label
+                                              >
+                                            </div>
+                                            <div class="ocd8a5j dir dir-ltr">
+                                              <label
+                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                for="feedback-secondary-options-CheckboxFieldGroup-info_confusing_or_unclear"
+                                                ><span class="_10ndlvp"
+                                                  ><input
+                                                    id="feedback-secondary-options-CheckboxFieldGroup-info_confusing_or_unclear"
+                                                    name="info_confusing_or_unclear"
+                                                    class="_1yf4i4f"
+                                                    type="checkbox" /><span
+                                                    class="_41yoza"
+                                                    data-checkbox="true"
+                                                  ></span></span
+                                                ><span
+                                                  class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                                  ><div
+                                                    class="o1qa0ptp dir dir-ltr"
+                                                  >
+                                                    This info is confusing or
+                                                    unclear
+                                                  </div></span
+                                                ></label
+                                              >
+                                            </div>
+                                            <div class="ocd8a5j dir dir-ltr">
+                                              <label
+                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                for="feedback-secondary-options-CheckboxFieldGroup-something_else"
+                                                ><span class="_10ndlvp"
+                                                  ><input
+                                                    id="feedback-secondary-options-CheckboxFieldGroup-something_else"
+                                                    name="something_else"
+                                                    class="_1yf4i4f"
+                                                    type="checkbox" /><span
+                                                    class="_41yoza"
+                                                    data-checkbox="true"
+                                                  ></span></span
+                                                ><span
+                                                  class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr"
+                                                  ><div
+                                                    class="o1qa0ptp dir dir-ltr"
+                                                  >
+                                                    Something else
+                                                  </div></span
+                                                ></label
+                                              >
+                                            </div>
+                                          </fieldset>
+                                          <div class="b1efsl54 dir dir-ltr">
+                                            <button
+                                              type="submit"
+                                              class="_1lerwp6l"
+                                            >
+                                              Submit
+                                            </button>
+                                          </div>
+                                        </div>
+                                      </form>
+                                    </section>
                                   </div>
                                 </div>
                                 <div class="d1fga68g dir dir-ltr"></div>
